--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -20,12 +20,15 @@
 server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	listen   [::]:80 default ipv6only=on; ## listen for ipv6
+	listen 443 ssl;
 
 	root /usr/share/nginx/www;
 	index index.php index.html index.htm;
 
 	# Make site accessible from http://localhost/
 	server_name localhost;
+	ssl_certificate    /etc/ngnix/ssl/cert.crt;
+	ssl_certificate_key    /etc/ngnix/ssl/cert.key;
 	
 	# Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
 	sendfile off;
