--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -27,8 +27,8 @@ server {
 
 	# Make site accessible from http://localhost/
 	server_name localhost;
-	ssl_certificate    /etc/ngnix/ssl/cert.crt;
-	ssl_certificate_key    /etc/ngnix/ssl/cert.key;
+	ssl_certificate    /etc/nginx/ssl/cert.crt;
+	ssl_certificate_key    /etc/nginx/ssl/cert.key;
 	
 	# Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
 	sendfile off;
